<resources>
    <string name="app_name">MyTweet</string>
    <string name="welcomeSignup">Sign up</string>
    <string name="signupSubtitle">Enter details below</string>
    <string name="welcomeLogin">Login</string>
    <string name="signupTitle">Sign up to MyTweet here</string>
    <string name="signupFirstname">First Name</string>
    <string name="signupLastName">Last Name</string>
    <string name="signupEmail">Email</string>
    <string name="signupPassword">Password</string>
    <string name="signupConfirmPassword">Confirm Password</string>
    <string name="loginTitle">Login to MyTweet</string>
    <string name="loginEmail">Email</string>
    <string name="loginPassword">Password</string>
    <string name="loginButton">Login</string>
    <string name="loginSubtitle">You must be registered to Login</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_signup">Signup</string>
    <string name="title_activity_mytweet">MyTweet</string>
    <string name="refresh">Refresh Tweet List</string>
    <string name="social">Social List</string>
    <string name="title_activity_options">Options_Menu</string>
    <string name="signupRegister">Register</string>
    <string name="tweetButton">Tweet</string>
    <string name="tweet">Whats on your mind?</string>
    <string name="delete_tweet">Delete Tweet</string>
    <string name="new_tweet">New Tweet</string>
    <string name="settings">Settings</string>
    <string name="contact">Select Contact</string>
    <string name="emailButton">Email Tweet via</string>
    <string name="tweet_report_nobody_contact">No one to contact </string>
    <string name="tweet_report_contact"> In contact </string>
    <string name="tweet_email_subject"> Status</string>
    <string name="username_summary">Please enter your user name</string>
    <string name="username">Username</string>
    <string name="password_summary">You may set your password here</string>
    <string name="password">Password</string>
    <string name="nmr_tweets_summary">How many Tweets to store locally?</string>
    <string name="nmr_tweets">Configure Downloads</string>
    <string name="set_refresh_interval_summary">Frequency of cloud updates (minutes)</string>
    <string name="set_refresh_interval">Refresh</string>
    <string name="action_settings">Settings</string>
    <string name="action_clear">Clear All Tweets</string>
</resources>
