<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@color/background_color"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/tweetButton"
        android:layout_width="169dp"
        android:layout_height="wrap_content"
        android:background="@color/button_color"
        android:textColor="@color/text_color"
        android:layout_marginTop="37dp"
        android:text="@string/tweetButton"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="21dp"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/tweet_EmailButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:background="@color/button_color"
        android:layout_marginRight="16dp"
        android:textColor="@color/text_color"
        android:text="@string/emailButton"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="42dp"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@color/button_color"
        android:text="@string/contact"
        android:layout_marginBottom="60dp"
        android:textColor="@color/text_color"
        android:layout_alignBottom="@+id/tweet_EmailButton"
        android:layout_alignParentStart="true"
        android:textAllCaps="false" />

    <TextView
        android:id="@+id/tweet_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:gravity="center"
        android:textColor="@color/text_color"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="30dp"
        android:layout_weight="1"
        android:layout_alignEnd="@+id/contact"
        android:layout_alignStart="@+id/contact"
        android:layout_above="@+id/contact" />

    <TextView
        android:id="@+id/countdown"
        android:text="140"
        android:textAlignment="center"
        android:textColor="@color/text_color"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="67dp"
        android:layout_alignBaseline="@+id/tweetButton"
        android:layout_alignBottom="@+id/tweetButton"
        android:layout_alignStart="@+id/tweet_date" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLength="140"
        android:ems="10"
        android:id="@+id/editTweet"
        android:hint="@string/tweet"
        android:textAlignment="center"
        android:layout_marginTop="84dp"
        android:textColor="@drawable/edit_text_selector"
        android:layout_below="@+id/tweetButton"
        android:layout_alignStart="@+id/tweet_date"
        android:layout_alignEnd="@+id/tweet_date" />


</RelativeLayout>